--- a/app/blog/templates/blog/base.html
+++ b/app/blog/templates/blog/base.html
@@ -19,6 +19,9 @@
 
       <section class="jumbotron text-center">
         <div class="container">
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu">Add</a>
+            {% endif %}
           <h1 class="jumbotron-heading">Mathieu Collet</h1>
           <p class="lead text-muted">I start programming...</p>
           <p>
@@ -30,24 +33,12 @@
 
       <div class="album py-5 bg-light">
         <div class="container">
-
-          <div class="row">
-            {% for job in jobs.all %}
-
-            <div class="col-md-4">
-              <a href="{% url 'detail' job.id %}">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="{{ job.image.url }}">
-                <div class="card-body">
-                  <p class="card-text">{{ job.summary }}</p>
+            <div class="row">
+                <div class="col-md-8">
+                    {% block content %}
+                    {% endblock %}
                 </div>
-              </div>
-              </a>
             </div>
-
-            {% endfor %}
-          </div>
-
         </div>
       </div>
 
