--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -1,6 +1,11 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
+
+{% if user.is_authenticated %}
+<a href="{% url 'post_new' %}" class="top-menu">Add</a>
+{% endif %}
 
 {% block content %}
+    <div class="col-md-8">
     {% for post in posts %}
         <div class="post">
             <div class="date">
@@ -10,4 +15,5 @@
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
+    </div>
 {% endblock %}
