--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,9 +19,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-            {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu">Add</a>
-            {% endif %}
+          <a href="{% url 'post_list'%}">blog</a> | <a href="{% url 'home'%}">portfolio</a>
           <h1 class="jumbotron-heading">Mathieu Collet</h1>
           <p class="lead text-muted">I start programming...</p>
           <p>
@@ -34,10 +32,8 @@
       <div class="album py-5 bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
                     {% block content %}
                     {% endblock %}
-                </div>
             </div>
         </div>
       </div>
