--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
+
+{% block content %}
 {% if user.is_authenticated %}
 <a href="{% url 'post_new' %}" class="top-menu">Add</a>
 {% endif %}
-
-{% block content %}
+<div class="album py-5 bg-light">
+  <div class="container">
+      <div class="row">
     <div class="col-md-8">
     {% for post in posts %}
         <div class="post">
@@ -16,4 +19,7 @@
         </div>
     {% endfor %}
     </div>
+</div>
+</div>
+</div>
 {% endblock %}
