--- a/app/portfolio/templates/jobs/home.html
+++ b/app/portfolio/templates/jobs/home.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="album py-5 bg-light">
+  <div class="container">
   <div class="row">
     {% for job in jobs.all %}
 
@@ -18,5 +20,7 @@
 
     {% endfor %}
   </div>
+</div>
+</div>
 
 {% endblock %}
