--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <a href="{% url 'post_list'%}">blog</a> | <a href="{% url 'home'%}">portfolio</a>
+          <a href="{% url 'post_list'%}">blog</a> | <a href="{% url 'home'%}">portfolio</a> | <a href="{% url 'admin:index'%}">admin</a>
           <h1 class="jumbotron-heading">Mathieu Collet</h1>
           <p class="lead text-muted">I start programming...</p>
           <p>
