--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,12 +14,34 @@
   </head>
 
   <body>
-
+    <header>
+      <!-- Fixed navbar -->
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">glacialcastle</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'home'%}">Portfolio</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'post_list'%}">Blog</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'admin:index'%}">Admin</a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+      </nav>
+    </header>
     <main role="main">
 
       <section class="jumbotron text-center">
         <div class="container">
-          <a href="{% url 'post_list'%}">blog</a> | <a href="{% url 'home'%}">portfolio</a> | <a href="{% url 'admin:index'%}">admin</a>
           <h1 class="jumbotron-heading">Mathieu Collet</h1>
           <p class="lead text-muted">I start programming...</p>
           <p>
@@ -40,10 +62,19 @@
 
     </main>
 
+    <footer class="text-muted">
+      <div class="container">
+        <p class="float-right">
+          <a href="#">Back to top</a>
+        </p>
+        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+        <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.4/getting-started/introduction/">getting started guide</a>.</p>
+      </div>
+    </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/bootstrap.js' %}" ></script>
     <script src="{% static 'jquery-3.3.1.min.js' %}" ></script>
+    <script src="{% static 'js/bootstrap.js' %}" ></script>
   </body>
 </html>
