--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Mathieu Collet</h1>
+          <h1 class="jumbotron-heading">MathieuC</h1>
           <p class="lead text-muted">I start programming...</p>
           <p>
             <a href="mailto:mathieu.collet@gmail.com" class="btn btn-primary my-2">Email Me</a>
