--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,80 +1,62 @@
 <!doctype html>
 <html lang="en">
 {% load static %}
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Mathieu Collet</title>
+  <title>Mathieu Collet</title>
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+</head>
 
-  <body>
-    <header>
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">glacialcastle</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home'%}">Portfolio</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'post_list'%}">Blog</a>
-            </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'admin:index'%}">Admin</a>
-            </li>
-            {% endif %}
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main role="main">
-
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">MathieuC</h1>
-          <p class="lead text-muted">I start programming...</p>
-          <p>
-            <a href="mailto:mathieu.collet@gmail.com" class="btn btn-primary my-2">Email Me</a>
-          </p>
-          <img src="{% static 'me.jpg' %}" height="300" />
-        </div>
-      </section>
-
-      <div class="album py-5 bg-light">
-        <div class="container">
-            <div class="row">
-                    {% block content %}
-                    {% endblock %}
-            </div>
-        </div>
+<body>
+  <header>
+    <!-- Fixed navbar : il faut corriger la position -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 fixed-top ">
+      <a class="navbar-brand" href="#">glacialcastle</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'home'%}">Portfolio</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'post_list'%}">Blog</a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'admin:index'%}">Admin</a>
+          </li>
+          {% endif %}
+        </ul>
       </div>
+    </nav>
+  </header>
 
-    </main>
 
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.4/getting-started/introduction/">getting started guide</a>.</p>
-      </div>
-    </footer>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'jquery-3.3.1.min.js' %}" ></script>
-    <script src="{% static 'js/bootstrap.js' %}" ></script>
-  </body>
+  {% block content %}
+  {% endblock %}
+
+
+  <footer class="text-muted">
+    <div class="container">
+      <p class="float-right">
+        <a href="#">Back to top</a>
+      </p>
+      <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+      <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.4/getting-started/introduction/">getting started guide</a>.</p>
+    </div>
+  </footer>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="{% static 'jquery-3.3.1.min.js' %}" ></script>
+  <script src="{% static 'js/bootstrap.js' %}" ></script>
+</body>
 </html>
