--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 {% load static %}
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,20 +12,40 @@
   <title>Mathieu Collet</title>
 
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
+  <style>
+    main>.container {
+      padding: 60px 15px 0;
+    }
+
+    .footer {
+      background-color: #f5f5f5;
+    }
+
+    .footer>.container {
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    code {
+      font-size: 80%;
+    }
+  </style>
 </head>
 
 <body>
   <header>
-    <!-- Fixed navbar : il faut corriger la position -->
+    
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 fixed-top ">
-      <a class="navbar-brand" href="#">glacialcastle</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="{% url 'index'%}">glacialcastle</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'home'%}">Portfolio</a>
+            <a class="nav-link" href="{% url 'port_list'%}">Portfolio</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'post_list'%}">Blog</a>
@@ -37,6 +58,7 @@
         </ul>
       </div>
     </nav>
+    
   </header>
 
 
@@ -49,14 +71,15 @@
       <p class="float-right">
         <a href="#">Back to top</a>
       </p>
-      <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-      <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.4/getting-started/introduction/">getting started guide</a>.</p>
+      <p>Mathieu C. 2020</p>
     </div>
   </footer>
+
   <!-- Bootstrap core JavaScript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="{% static 'jquery-3.3.1.min.js' %}" ></script>
-  <script src="{% static 'js/bootstrap.js' %}" ></script>
+  <script src="{% static 'jquery-3.3.1.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
 </body>
+
 </html>
